# finance_benchmark

./: .gitignore  pyproject.toml  readme.md
finance_benchmark/: config.py
finance_benchmark/result_html/: DASHBOARD.html  evol_asset_price.html  period_return_fig.html  sharpe_by_asset_fig.html
finance_benchmark/src/: portfolio_optimization.py
