[tool.poetry]
name = "finance_benchmark"
version = "0.1.0"
description = ""
authors = ["croumegous <cyril.roumegous@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.3"
pandas = "^1.2.4"
tqdm = "^4.61.0"
black = "^21.5b2"
plotly = "^4.14.3"
requests-cache = "^0.6.3"
pandas-datareader = "^0.9.0"
pylint = "^2.8.3"
isort = "^5.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
